--- a/WebApplication33/SearchIntegration/Styles/burgerStyle.css
+++ b/WebApplication33/SearchIntegration/Styles/burgerStyle.css
@@ -11,14 +11,15 @@ nav {
     height: 12vh;
     width: 90vw;
 }
-nav h1 {
-    text-align: center;
-}
 
-nav label {
-    font-family: 'Audiowide';
-    font-size: 1.1rem;
-}
+    nav h1 {
+        text-align: center;
+    }
+
+    nav label {
+        font-family: 'Audiowide';
+        font-size: 1.1rem;
+    }
 
 h1 {
     font-family: 'Audiowide';
@@ -31,9 +32,102 @@ h1 {
 #navSearch {
     text-align: right;
     margin-top: -20px;
-    padding: 0 20px 0 0 ;
+    padding: 0 20px 0 0;
 }
 
 .checked {
     padding: 0 0 0 20px;
+}
+
+#update {
+    margin: 5px auto;
+    width: 70vw;
+    color: snow;
+}
+
+    #update ul {
+        list-style: none;
+        margin: 0;
+        padding: 30px 0 0 0;
+    }
+
+    #update h3 {
+        color: #20b2aa;
+        font-size: 2rem;
+    }
+
+    #update ul li {
+        width: 100%;
+        padding: 0 20px;
+        padding-bottom: 10px;
+        height: 100px;
+        overflow: hidden;
+        -moz-animation: expand 2s;
+        -o-animation: expand 2s;
+        -webkit-animation: expand 2s;
+        animation: expand 2s;
+        -moz-transition: height 0.6s ease-out;
+        -o-transition: height 0.6s ease-out;
+        -webkit-transition: height 0.6s ease-out;
+        transition: height 0.6s ease-out;
+    }
+
+    #update li:hover {
+        background-color: #085550;
+        height: 140px;
+        min-height: 100px;
+        overflow: visible;
+        border-radius: 2px;
+        margin-bottom: 10px;
+    }
+
+    #update img {
+        float: right;
+        width: 60px;
+        height: 60px;
+        margin-top: -40px;
+        margin-left: 10px;
+    }
+
+
+@-moz-keyframes expand {
+    0% {
+        opacity: 0.3;
+    }
+
+    50% {
+        opacity: 0.6;
+    }
+
+    100% {
+        opacity: 1.0;
+    }
+}
+
+@-webkit-keyframes expand {
+    0% {
+        opacity: 0.3;
+    }
+
+    50% {
+        opacity: 0.6;
+    }
+
+    100% {
+        opacity: 1.0;
+    }
+}
+
+@keyframes expand {
+    0% {
+        opacity: 0.3;
+    }
+
+    50% {
+        opacity: 0.6;
+    }
+
+    100% {
+        opacity: 1.0;
+    }
 }
